# TurismoVivo-Backend

./: Dockerfile  README.md
src/: main.py  pyproject.toml  requirements.txt  server.py
src/api/routers/: courses.py  news.py  services.py
src/api/schemas/: courses.py  news.py  services.py
src/config/: db_config.py  settings.py  supabase_client.py
src/domain/: course.py  news.py  services.py
src/infrastructure/database/functions/: courses.py  news.py  services.py
src/infrastructure/database/models/: courses.py  news.py  services.py
src/repository/: course_repository.py  news_repository.py  services_repository.py
src/use_case/: course.py  news.py  services.py
